--- a/second/build.gradle
+++ b/second/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 
@@ -12,10 +12,7 @@ repositories {
 
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-    implementation 'org.slf4j:slf4j-simple:1.7.30'
-    implementation("io.vertx:vertx-web:4.4.6")
-    implementation( "com.hazelcast:hazelcast:5.3.2")
+    implementation(project(":common"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
