--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'halzetcasttest'
+include("common")
 include("first")
 include("second")
+include("third")
 include("zorchestrator")
 
