--- a/third/build.gradle
+++ b/third/build.gradle
@@ -35,6 +35,6 @@ jar {
                 'Built-By': System.getProperty('user.name'),
                 'Built-Date': new Date(),
                 'Built-JDK': System.getProperty('java.version'),
-                'Main-Class': "test.GET"
+                'Main-Class': "test.Evict"
     }
 }
